--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			</div>
 			<div style="width:33%; float:left; color: #555; text-align:center; font-size:24px;border-radius: 10px;
     background: rgba(255,255,255,0.9);padding:10px;">
-				<a href="mailto:vlad@htmlbook.ru" style='color:#000;text-decoration:none;'>opt@biotechrussia.ru</a>
+				<a href="mailto:opt@biotechrussia.ru" style='color:#000;text-decoration:none;'>opt@biotechrussia.ru</a>
 			</div>
 			</div>
 		</div>
