--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Head -->
 <head>
 
-<title>App Launch Countdown Widget A Flat Responsive Widget Template :: W3layouts</title>
+<title>BioTech</title>
 
 <!-- For-Mobile-Apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
